# fairy-vm

./: .gitmodules  CMakeLists.txt
include/vm/: configuration.hpp  init.hpp  instruction.hpp  interpreter.hpp  logs.hpp  utils.hpp  value.hpp
src/: CMakeLists.txt  main.cpp
